spacing issues

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  line-height: 1.8;
+  line-height: 1.6;
 }
 
 
@@ -25,7 +25,8 @@ body {
 }
 
 .image-section img {
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   height: auto;
 }
@@ -40,17 +41,19 @@ body {
   font-family: 'Kumbh Sans';
   text-transform: uppercase;
   letter-spacing: 1px;
-  font-size: 20px;
+  font-size: 12px;
   font-weight: 600;
+  line-height: 1.2;
   color: #949fac;
   margin-top: 20px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 .text-section h1 {
   font-family: 'Syne';
   font-size: 60px;
   letter-spacing: -2px;
+  line-height: 1.2;
   font-weight: 600;
   color: black;
   margin: 10px 0 20px;
@@ -58,10 +61,11 @@ body {
 
 .text-section p {
   font-family: 'Kumbh Sans';
+  letter-spacing: -0.3px
   font-size: 16px;
   color: black;
   font-weight: 400;
-  line-height: 1.8;
+  line-height: 1.5;
   margin-bottom: 20px;
   word-break: break-word;
 }
@@ -70,6 +74,7 @@ body {
   list-style: none;
   font-weight: 400;
   padding: 0;
+  margin: 0;
   color: black;
 }
 
